--- a/views/user/partials/left_nav.ejs
+++ b/views/user/partials/left_nav.ejs
@@ -7,16 +7,10 @@
     </div>
     <div class="left-menu-inner scroll-pane">
         <ul class="left-menu-list left-menu-list-root list-unstyled">
-            <li class="<%= tab == 'manage_groups' ? 'left-menu-list-active' : '' %>">
-                <a class="left-menu-link" href="/admin/manage_groups">
-                    <i class="left-menu-link-icon fa fa-group"><!-- --></i>
-                    Groups
-                </a>
-            </li>
-            <li class="<%= tab == 'manage_users' ? 'left-menu-list-active' : '' %>">
-                <a class="left-menu-link" href="/admin/manage_users">
-                    <i class="left-menu-link-icon fa fa-user"><!-- --></i>
-                    Users
+            <li class="left-menu-list-active">
+                <a class="left-menu-link" href="/">
+                    <i class="left-menu-link-icon fa fa-group"></i>
+                    Dashboard
                 </a>
             </li>
         </ul>
