--- a/views/admin/partials/top_nav.ejs
+++ b/views/admin/partials/top_nav.ejs
@@ -13,6 +13,7 @@
                     </span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
+                    <a class="dropdown-item" href="/admin/update_password"><i class="dropdown-icon icmn-user"></i> Change Password</a>
                     <a class="dropdown-item" href="javascript:void(0)"><i class="dropdown-icon icmn-user"></i> Profile</a>
                     <div class="dropdown-divider"></div>
                     <div class="dropdown-header">Home</div>
