--- a/views/admin/update_password.ejs
+++ b/views/admin/update_password.ejs
@@ -30,14 +30,22 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<form method="post" action="/user/update">
+					<form method="post" class="validatedFrm" action="/user/update_password">
 					     
-				        	<div class="form-group row">
+					        <div class="form-group row">
 					            <div class="col-md-3">
-					                <label class="form-control-label">Email</label>
+					                <label class="form-control-label">New Password</label>
 					            </div>
 					            <div class="col-md-9">
-					                <input type="email" name="email" id="group-edit" class="form-control" placeholder="Email" value="<%= email %>" required>
+					                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+					            </div>
+					        </div>
+					        <div class="form-group row">
+					            <div class="col-md-3">
+					                <label class="form-control-label">Confirm Password</label>
+					            </div>
+					            <div class="col-md-9">
+					                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password">
 					            </div>
 					        </div>
 					        <button type="submit" class="btn btn-primary">Save changes</button>
@@ -51,3 +59,18 @@
 
 <%- contentFor('page_script') %>
 <!-- Page Scripts -->
+<script>
+    $(function(){
+			$('.validatedForm').validate({
+	            rules : {
+	                password : {
+	                    minlength : 4
+	                },
+	                confirm_password : {
+	                    minlength : 4,
+	                    equalTo : "#password"
+	                }
+            	}
+            });
+    });
+</script>
