--- a/views/user/partials/top_nav.ejs
+++ b/views/user/partials/top_nav.ejs
@@ -13,7 +13,8 @@
                     </span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                    <a class="dropdown-item" href="/user/update"><i class="dropdown-icon icmn-user"></i> Profile</a>
+                    <a class="dropdown-item" href="/user/update_password"><i class="dropdown-icon icmn-user"></i> Change Password</a>
+                    <a class="dropdown-item" href="/user/update"><i class="dropdown-icon icmn-user"></i> Update Email</a>
                     <div class="dropdown-divider"></div>
                     <div class="dropdown-header">Home</div>
                     <div class="dropdown-divider"></div>
