--- a/views/admin/update_password.ejs
+++ b/views/admin/update_password.ejs
@@ -1,6 +1,4 @@
 <%- contentFor('body') %>
-<%- include partials/left_nav.ejs %>
-<%- include partials/top_nav.ejs %>
 <section class="page-content">
 	<section class="panel">
 		<div class="panel-heading">
@@ -30,14 +28,14 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<form method="post" class="validatedFrm" action="/user/update_password">
+					<form  class="validatedFrm" ng-submit="changePassword($event)">
 					     
 					        <div class="form-group row">
 					            <div class="col-md-3">
 					                <label class="form-control-label">New Password</label>
 					            </div>
 					            <div class="col-md-9">
-					                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+					                <input type="password" name="password" id="password" class="form-control" ng-model="userPass.password" placeholder="Password">
 					            </div>
 					        </div>
 					        <div class="form-group row">
@@ -45,10 +43,10 @@
 					                <label class="form-control-label">Confirm Password</label>
 					            </div>
 					            <div class="col-md-9">
-					                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password">
+					                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" ng-model="userPass.confirm_password">
 					            </div>
 					        </div>
-					        <button type="submit" class="btn btn-primary">Save changes</button>
+					        <button type="submit" class="btn btn-primary" >Save changes</button>
 					      
 				    </form>
 				</div>
@@ -59,18 +57,3 @@
 
 <%- contentFor('page_script') %>
 <!-- Page Scripts -->
-<script>
-    $(function(){
-			$('.validatedForm').validate({
-	            rules : {
-	                password : {
-	                    minlength : 4
-	                },
-	                confirm_password : {
-	                    minlength : 4,
-	                    equalTo : "#password"
-	                }
-            	}
-            });
-    });
-</script>
