--- a/public/views/admin/update_password.ejs
+++ b/public/views/admin/update_password.ejs
@@ -8,7 +8,7 @@
 	           Manage Profile
 	        </h3>
 	    </div>
-		<div class="panel-body">
+		/*<div class="panel-body">
 			<div>
 				<%if (messages.errors) { %>
 	                <div class="alert alert-danger" role="alert">
@@ -26,7 +26,7 @@
 	                	<%= messages.success[0].message %>
 	                </div>
 	            <% } %>
-			</div>
+			</div>*/
 
 			<div class="row">
 				<div class="col-md-12">
