--- a/views/admin/manage_groups.ejs
+++ b/views/admin/manage_groups.ejs
@@ -47,7 +47,7 @@
 								   <tr>
 								     <td><%= groups[i].group %></td>
 								     <td>
-								     	<button type="button" class="btn btn-success margin-inline btn-xs btn-edit" data-id="<%= groups[i].id %>" data-group="<%= groups[i].group %>">Edit</button>
+								     	<button type="button" class="btn btn-success margin-inline btn-xs btn-edit" data-id="<%= groups[i].id %>" data-group="<%= groups[i].group %>" data-toggle="modal" data-target="#editGroupModal" ng-click="editGroup(<%= JSON.stringify(groups[i]) %>)">Edit</button>
 								     	<button type="button" class="btn btn-danger margin-inline btn-xs btn-del" data-id="<%= groups[i].id %>" ng-click="deleteGroup(<%= JSON.stringify(groups[i].id) %>)">Delete</button>
 								     </td>
 								   </tr>
@@ -77,14 +77,14 @@
 			                <label class="form-control-label">Group Name</label>
 			            </div>
 			            <div class="col-md-9">
-			                <input type="text" name="group" id="group-edit" class="form-control" placeholder="Group" required>
+			                <input type="text" name="group" id="group-edit" class="form-control" ng-model="groups.group" placeholder="Group" required>
 			                <input type="hidden" name="group_id" id="group-id">
 			            </div>
 			        </div>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-	        <button type="submit" class="btn btn-primary">Save changes</button>
+	        <button type="submit" class="btn btn-primary" ng-click="updateGroup($event)">Save changes</button>
 	      </div>
       </form>
     </div>
