--- a/views/admin/manage_users.ejs
+++ b/views/admin/manage_users.ejs
@@ -123,21 +123,7 @@
       <form  ng-submit="createUser()" >
 	      <div class="modal-body">
 	           <div class="form-group row">
-			            <div class="col-md-3">
-			                <label class="form-control-label">Firstname</label>
-			            </div>
-			            <div class="col-md-9">
-			                <input type="text" name="firstname" id="group-edit" class="form-control" placeholder="Firstname" ng-model="user.firstname" required>
-			            </div>
-			        </div>
-	              <div class="form-group row">
-			            <div class="col-md-3">
-			                <label class="form-control-label">Lastname</label>
-			            </div>
-			            <div class="col-md-9">
-			                <input type="text" name="lastname" id="group-edit" class="form-control" placeholder="Lastname" ng-model="user.lastname" required>
-			            </div>
-			        </div>
+			        
 		        	<div class="form-group row">
 			            <div class="col-md-3">
 			                <label class="form-control-label">Username</label>
@@ -170,7 +156,7 @@
 			                <label class="form-control-label">User Group</label>
 			            </div>
 			            <div class="col-md-9">
-			               <select name="userGroup" class="form-control" >
+			               <select name="userGroup" ng-model="user.userGroup" class="form-control" >
 			               		<% if(typeof groups != 'undefined'){ %>
 									<% for(var i=0; i < groups.length; i++) { %>
 										<option><%= groups[i].group %></option>
