--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -28,27 +28,60 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<form  class="validatedFrm" ng-submit="editProfile($event)">
-					     
-					        <div class="form-group row">
-					            <div class="col-md-3">
-					                <label class="form-control-label">Firstname</label>
-					            </div>
-					            <div class="col-md-9">
-					                <input type="text" name="firstname" id="firstname" class="form-control" ng-model="user.firstname" placeholder="Firstname">
-					            </div>
-					        </div>
-					        <div class="form-group row">
-					            <div class="col-md-3">
-					                <label class="form-control-label">Lastname</label>
-					            </div>
-					            <div class="col-md-9">
-					                <input type="text" name="lastname" class="form-control" placeholder="Lastname" ng-model="user.lastname">
-					            </div>
-					        </div>
-					        <button type="submit" class="btn btn-primary" >Save changes</button>
-					      
-				    </form>
+				
+	  <form  ng-submit="editProfile($event)" >
+	      <div class="modal-body">
+	           <div class="form-group row">			           
+		        	<div class="form-group row">
+			            <div class="col-md-3">
+			                <label class="form-control-label">Username</label>
+			            </div>
+			            <div class="col-md-9">
+			                <input type="text" name="username" id="group-edit" class="form-control" placeholder="Username" ng-model="user.username" required>
+			            </div>
+			        </div>
+			        <div class="form-group row">
+			            <div class="col-md-3">
+			                <label class="form-control-label">Password</label>
+			            </div>
+			            <div class="col-md-9">
+			                <input type="text" name="password" id="group-edit" class="form-control" placeholder="Password" ng-model="user.password" required>
+			            </div>
+			        </div>
+			        <div class="form-group row">
+			            <div class="col-md-3">
+			                <label class="form-control-label">User Type</label>
+			            </div>
+			            <div class="col-md-9">
+			               <select name="userType" id="userType" class="form-control" ng-model="user.userType" ng-change="userSelect()">
+			               		<option value="ADMIN">ADMIN</option>
+			               		<option value="USER">USER</option>
+			               </select>
+			            </div>
+			        </div>
+			        <div ng-show="usertype.showvalue" class="form-group row form-user-group" >
+			            <div class="col-md-3">
+			                <label class="form-control-label">User Group</label>
+			            </div>
+			            <div class="col-md-9">
+			               <select name="userGroup" class="form-control" >
+			               		<% if(typeof groups != 'undefined'){ %>
+									<% for(var i=0; i < groups.length; i++) { %>
+										<option><%= groups[i].group %></option>
+									<% } %>
+								<% } %>
+			               </select>
+			            </div>
+			        </div>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	        <button type="submit" class="btn btn-primary"  >Save changes</button>
+	      </div>
+      </form>
+
+
+
 				</div>
 			</div>
 		</div>
