--- a/views/user/update_password.ejs
+++ b/views/user/update_password.ejs
@@ -1,6 +1,4 @@
 <%- contentFor('body') %>
-<%- include partials/left_nav.ejs %>
-<%- include partials/top_nav.ejs %>
 <section class="page-content">
 	<section class="panel">
 		<div class="panel-heading">
@@ -30,14 +28,17 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<form method="post" class="validatedFrm" action="/user/update_password">
+					<form  class="validatedFrm" ng-submit="changePassword($event)">
 					     
 					        <div class="form-group row">
 					            <div class="col-md-3">
 					                <label class="form-control-label">New Password</label>
 					            </div>
 					            <div class="col-md-9">
-					                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+					                 <input type="text" name="password" id="group-edit" class="form-control" placeholder="Password" ng-model="userPass.password"  ng-minlength="4" ng-maxlength="50"  required>
+					                 <p class="myError" style="color:red" ng-if="validatedFrm.password.$error.empty">password is required.</p>
+			                            <p class="myError" style="color:red" ng-show="validatedFrm.password.$error.minlength" class="help-block">password is too short.</p>
+           						 <p class="myError" style="color:red" ng-show="validatedFrm.password.$error.maxlength" class="help-block">password is too long.</p>
 					            </div>
 					        </div>
 					        <div class="form-group row">
@@ -45,10 +46,11 @@
 					                <label class="form-control-label">Confirm Password</label>
 					            </div>
 					            <div class="col-md-9">
-					                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password">
+					                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" ng-model="userPass.confirm_password">
 					            </div>
+					             <p class="myError" style="color:red" ng-show="userPass.invalid" class="help-block">new password and confirm password should be same</p>
 					        </div>
-					        <button type="submit" class="btn btn-primary">Save changes</button>
+					        <button type="submit" class="btn btn-primary"  >Save changes</button>
 					      
 				    </form>
 				</div>
@@ -59,18 +61,3 @@
 
 <%- contentFor('page_script') %>
 <!-- Page Scripts -->
-<script>
-    $(function(){
-			$('.validatedForm').validate({
-	            rules : {
-	                password : {
-	                    minlength : 4
-	                },
-	                confirm_password : {
-	                    minlength : 4,
-	                    equalTo : "#password"
-	                }
-            	}
-            });
-    });
-</script>
