--- a/views/admin/update_password.ejs
+++ b/views/admin/update_password.ejs
@@ -35,7 +35,7 @@
 					                <label class="form-control-label">New Password</label>
 					            </div>
 					            <div class="col-md-9">
-					                 <input type="text" name="password" id="group-edit" class="form-control" placeholder="Password" ng-model="userPass.password"  ng-minlength="4" ng-maxlength="50"  required>
+					                 <input type="password" name="password" id="group-edit" class="form-control" placeholder="Password" ng-model="userPass.password"  ng-minlength="4" ng-maxlength="50"  required>
 					                 <p class="myError" style="color:red" ng-if="validatedFrm.password.$error.empty">password is required.</p>
 			                            <p class="myError" style="color:red" ng-show="validatedFrm.password.$error.minlength" class="help-block">password is too short.</p>
            						 <p class="myError" style="color:red" ng-show="validatedFrm.password.$error.maxlength" class="help-block">password is too long.</p>
