--- a/views/admin/manage_users.ejs
+++ b/views/admin/manage_users.ejs
@@ -83,6 +83,16 @@
 			                <input type="text" name="username" id="user-edit" class="form-control" placeholder="Username" ng-model="user.username" required>			                
 			            </div>
 			        </div>
+                      <div class="form-group row">
+			        <div class="col-md-3">
+			                <label class="form-control-label">Password</label>
+			            </div>
+			            <div class="col-md-9">
+			                <input type="text" name="password" id="group-edit" class="form-control" placeholder="Password" ng-model="userTemp.password" >
+			                <p ng-show="userPass.editInvalid" style="color:red;">password is to short <p>
+			            </div>
+			       </div>
+
 			        <div class="form-group row">
 			            <div class="col-md-3">
 			                <label class="form-control-label">User Type</label>
