--- a/public/dashboard/assets/common/css/source/apps/profile.css
+++ b/public/dashboard/assets/common/css/source/apps/profile.css
@@ -47,6 +47,12 @@
     margin-top: 4px;
 }
 
+
+
+.icon-background2 {
+    color: #ff0000;
+}
+
 .mode-superclean .profile-header-title {
     padding-left: 15px;
 }
