--- a/views/user/dailyDetails.ejs
+++ b/views/user/dailyDetails.ejs
@@ -4,7 +4,7 @@
 	<section class="panel">
 		<div class="panel-heading">
 	        <h3>
-	     Details 
+	     daily Detail 
 	        </h3>
 	    </div>
 		
@@ -32,11 +32,11 @@
 					<table class="table table-hover nowrap row-border hover" id="example1" datatable="ng">
 						<thead>
 		                    <tr>
-								<th>UniqueID</th>
-								<th>CustomerName</th>
-								<th>GreenStatus</th>
-								<th>YellowStatus</th>
-								<th>RedStatus</th>
+								<th>column1</th>
+								<th>Column2</th>
+								<th>Column3</th>
+								<th>Column4</th>
+								<th>Column5</th>
 
 							</tr>
 						</thead>
