--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -27,52 +27,48 @@
                 <% } %>
             </div>
             <div class="row">
-                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" ng-click="detailsScreen('offline')">
+                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" Style="cursor:pointer" ng-click="detailsScreen('offline')">
                         <div class="widget widget-seven background-success">
                             <div class="widget-body">
                                 <div href="javascript: void(0);" class="widget-body-inner">
                                     <h5 class="text-uppercase">Offline</h5>
-                                    <i class="counter-icon icmn-folder-check"></i>
+                                    <i class="counter-icon icmn-folder-check" "></i>
                                     <span class="counter-count">                                     
                                     </span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12"  ng-click="detailsScreen('underreview')">
+                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" style="cursor:pointer" ng-click="detailsScreen('underreview')">
                         <div class="widget widget-seven" style="background-color:#c5c84b">
                             <div class="widget-body">
                                 <div href="javascript: void(0);" class="widget-body-inner" >
-                                    <h5 class="text-uppercase">Under Review</h5>
-                                    <i class="counter-icon icmn-folder-search"></i>
-                                    <span class="counter-count">
-                                    
-                                       
+                                    <h5 class="text-uppercase" style="color:#ffffff">Under Review</h5>
+                                 <img src="../assets/common/img/searchFolder.png"  style="height:50px; width:60px;" alt="img" />
+                                    <span class="counter-count">                                    
                                     </span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12"  ng-click="detailsScreen('Online')">
-                        <div class="widget widget-seven" style="background-color:red">
+                      <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" style="cursor:pointer"  ng-click="detailsScreen('online')">
+                        <div class="widget widget-seven" style="background-color:#fa1414">
                             <div class="widget-body">
-                                <div href="javascript: void(0);" class="widget-body-inner">
-                                    <h5 class="text-uppercase">Online</h5>
-                                    <i class="counter-icon icmn-folder-remove"></i>
-                                    <span class="counter-count">
-                                       
-                                      
+                                <div href="javascript: void(0);" class="widget-body-inner" >
+                                    <h5 class="text-uppercase" style="color:#ffffff">Online</h5><br>
+                                 <img src="../assets/common/img/Deletefolder.png"  style="height:42px; width:42px; margin-top:7px;" alt="img" />
+                                    <span class="counter-count">                                    
                                     </span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12"  ng-click="detailsScreen('Total')">
+                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" style="cursor:pointer"  ng-click="detailsScreen('Total')">
                         <div class="widget widget-seven">
                             <div class="widget-body">
                                 <div href="javascript: void(0);" class="widget-body-inner">
                                     <h5 class="text-uppercase">Total</h5>
-                                    <i class="counter-icon icmn-bug"></i>
+                                    <i class="counter-icon icmn-bug" style="margin-top:10px"></i>
                                     <span class="counter-count">
                                       
                                       
