--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -8,79 +8,107 @@
         </div>
         
         <div class="panel-body">
-            <div>
-                <%if (messages.errors) { %>
-                    <div class="alert alert-danger" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">×</span>
-                        </button>
-                        <%= messages.errors[0].messages || messages.errors[0].msg %>
-                    </div>
-                <% } %>
-                <%if (messages.success) { %>
-                    <div class="alert alert-success" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">×</span>
-                        </button>
-                        <%= messages.success[0].messages || messages.success[0].msg %>
-                    </div>
-                <% } %>
-            </div>
+            
             <div class="row">
                     <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" Style="cursor:pointer" ng-click="detailsScreen('offline')">
-                        <div class="widget widget-seven background-success">
+                        <div class="widget widget-seven background-danger"  >
                             <div class="widget-body">
                                 <div href="javascript: void(0);" class="widget-body-inner">
                                     <h5 class="text-uppercase">Offline</h5>
-                                    <i class="counter-icon icmn-folder-check" "></i>
-                                    <span class="counter-count">                                     
+                                    <i class="counter-icon icmn-folder-check"></i>                                    
+                                    <span class="counter-count"> 
+                                    <i class="icmn-arrow-up5"></i>
+                                   <span class="counter-init" style="height:10px; width:10px;"  data-from="25" data-to="942">942</span>                                   
                                     </span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" style="cursor:pointer" ng-click="detailsScreen('underreview')">
+                    <div class="row">
+                    <div class="col-md-12">
                         <div class="widget widget-seven" style="background-color:#c5c84b">
                             <div class="widget-body">
                                 <div href="javascript: void(0);" class="widget-body-inner" >
-                                    <h5 class="text-uppercase" style="color:#ffffff">Under Review</h5>
-                                 <img src="../assets/common/img/searchFolder.png"  style="height:50px; width:60px;" alt="img" />
-                                    <span class="counter-count">                                    
+                                    <h5 class="text-uppercase" style="color:#ffffff">Under Review</h5>  <br>                              
+                                 <img src="../assets/common/img/searchFolder.png"  style="height:42px; width:42x; " alt="img" />                             
+                                   
+                                    <span class="counter-count"> 
+                                    <i class="icmn-arrow-down5" style="color:#ffffff"></i>
+                                   <span class="counter-init" style="color:#ffffff" data-from="25" data-to="942 ">99</span>                                   
                                     </span>
+                                  </div>   
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
                       <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" style="cursor:pointer"  ng-click="detailsScreen('online')">
-                        <div class="widget widget-seven" style="background-color:#fa1414">
+                        <div class="row">
+                    <div class="col-md-12">
+                        <div class="widget widget-seven background-success" style="background-color:#fa1414">
                             <div class="widget-body">
                                 <div href="javascript: void(0);" class="widget-body-inner" >
                                     <h5 class="text-uppercase" style="color:#ffffff">Online</h5><br>
-                                 <img src="../assets/common/img/Deletefolder.png"  style="height:42px; width:42px; margin-top:7px;" alt="img" />
-                                    <span class="counter-count">                                    
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" style="cursor:pointer"  ng-click="detailsScreen('Total')">
-                        <div class="widget widget-seven">
-                            <div class="widget-body">
-                                <div href="javascript: void(0);" class="widget-body-inner">
-                                    <h5 class="text-uppercase">Total</h5>
-                                    <i class="counter-icon icmn-bug" style="margin-top:10px"></i>
-                                    <span class="counter-count">
-                                      
-                                      
+                                 <img src="../assets/common/img/Deletefolder.png"  style="height:38px; width:38px; margin-top:7px ;" alt="img" />
+                                   <span class="counter-count"> 
+                                    <i class="icmn-arrow-up5"></i>
+                                   <span class="counter-init" style="height:10px; width:10px;"  data-from="25" data-to="942">10</span>                                   
                                     </span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-12" style="cursor:pointer"  ng-click="detailsScreen('Total')">
+                        <div class="widget widget-seven">
+                            <div class="widget-body">
+                                <div href="javascript: void(0);" class="widget-body-inner">
+                                    <h5 class="text-uppercase">Total</h5>
+                                    <i class="counter-icon icmn-bug" style="margin-top:10px"></i>
+                                    <span class="counter-count"> 
+                                   <i class="icmn-arrow-down5"></i>
+                                   <span class="counter-init" style="height:10px; width:10px;"  data-from="25" data-to="942">293</span>                                   
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    <div class="row">
+            <div class="col-xl-6">
+              <div class="widget-body">
+                <div class="chart-line height-250 chartist"></div>
+            </div> 
+       </div>
+        <div class="col-xl-6 background-danger" ng-click="dailyDetailScreen()" style=" text-align:center; height:235px; width:465px;">            
+                       <h1 style="color:#ffffff;font-size:50px;">MAP</h1>                        
+                        <h2 style="font-size:150px; color:#ffffff;" >153</h2>                 
+                </div> 
+        </div>
+    </div>
         </div>
     </section>
 </section>
 
 <%- contentFor('page_script') %>
 <!-- Page Scripts -->
+<script>
+ new Chartist.Line(".chart-line", {
+            labels: ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday","saturday","sunday"],
+            series: [
+                
+                [5000,10000, 20000, 15000, 40000,30000,55000]
+              
+            ]
+        }, {
+            fullWidth: !0,
+            chartPadding: {
+                right: 40
+            },
+            plugins: [
+                Chartist.plugins.tooltip()
+            ]
+        });
+</script>
