--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -93,7 +93,7 @@
                                  </div>  
                             </div>
                                 <div class=" col-xl-6 " ng-click="mapscreen()" style=" text-align:center;">    
-                                <div class="widget-body background-danger">
+                                <div class="widget-body background-danger" style="cursor:pointer">
                                  <div href="javascript: void(0);" class="widget-body-inner">
                                     <h1 style="color:#ffffff;font-size:50px;">MAP</h1>                 
                                     <h2 style="font-size:150px; color:#ffffff;" >153</h2>
