--- a/views/admin/manage_groups.ejs
+++ b/views/admin/manage_groups.ejs
@@ -13,22 +13,20 @@
 				</div>
 			</div>
 			<div>
-				<%if (messages.errors) { %>
-	                <div class="alert alert-danger" role="alert">
+			
+	                <div class="alert alert-danger" role="alert" ng-show="showSuccess()">
 	                	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 	                		<span aria-hidden="true">×</span>
 	                	</button>
-	                	<%= messages.errors[0].message %>
 	                </div>
-	            <% } %>
-	            <%if (messages.success) { %>
-	                <div class="alert alert-success" role="alert">
+	          
+	         
+	                <div class="alert alert-success" role="alert" ng-show="showSuccess()">
 	                	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 	                		<span aria-hidden="true">×</span>
 	                	</button>
-	                	<%= messages.success[0].message %>
 	                </div>
-	            <% } %>
+	           
 			</div>
 
 			<div class="row">
@@ -97,14 +95,14 @@
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">×</span>
                                 </button>
-                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                <h4 class="modal-title" id="myModalLabel">Delete Group</h4>
                             </div>
                             <div class="modal-body">
                                 <p>Are you sure you want to delete?</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"ng-click="deleteGroup($event)"  data-dismiss="modal">Save changes</button>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"ng-click="deleteGroup($event)"  data-dismiss="modal">OK</button>
                             </div>
                             </div>
                              </div>
