--- a/views/user/update_password.ejs
+++ b/views/user/update_password.ejs
@@ -28,7 +28,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<form  class="validatedFrm" ng-submit="changePassword($event)">
+					<form name="validatedFrm"  class="validatedFrm" ng-submit="changePassword($event)">
 					     
 					        <div class="form-group row">
 					            <div class="col-md-3">
@@ -37,7 +37,7 @@
 					            <div class="col-md-9">
 					                 <input type="password" name="password" id="group-edit" class="form-control" placeholder="Password" ng-model="userPass.password"  ng-minlength="4" ng-maxlength="50"  required>
 					                 <p class="myError" style="color:red" ng-if="validatedFrm.password.$error.empty">password is required.</p>
-			                            <p class="myError" style="color:red" ng-show="validatedFrm.password.$error.minlength" class="help-block">password is too short.</p>
+			                            <p class="myError" style="color:red" ng-show="validatedFrm.password.$error.minlength" class="help-block">Please enter at least 4 characters.</p>
            						 <p class="myError" style="color:red" ng-show="validatedFrm.password.$error.maxlength" class="help-block">password is too long.</p>
 					            </div>
 					        </div>
@@ -47,8 +47,9 @@
 					            </div>
 					            <div class="col-md-9">
 					                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" ng-model="userPass.confirm_password">
+					                 <p class="myError" style="color:red" ng-show="userPass.invalid" class="help-block">Please enter the same value again.</p>
 					            </div>
-					             <p class="myError" style="color:red" ng-show="userPass.invalid" class="help-block">new password and confirm password should be same</p>
+					            
 					        </div>
 					        <button type="submit" class="btn btn-primary"  >Save changes</button>
 					      
