--- a/views/admin/manage_users.ejs
+++ b/views/admin/manage_users.ejs
@@ -177,7 +177,7 @@
 			                <input type="text" name="password" id="group-edit" class="form-control" placeholder="Password" ng-model="user.password"  ng-minlength="4" ng-maxlength="50"  required>
 			                <p class="myError" style="color:red" ng-if="userForm.password.$error.empty">password is required.</p>
 			                            <p class="myError" style="color:red" ng-show="userForm.password.$error.minlength" class="help-block">password is too short.</p>
-           						 <p class="myError" style="color:red" ng-show="userForm.password.$error.maxlength" class="help-block">password is too long.</p>
+           						 <p class="myError" style="color:red" ng-show="userForm .password.$error.maxlength" class="help-block">password is too long.</p>
 			            </div>
 			        </div>
 			        <div class="form-group row">
@@ -197,8 +197,10 @@
 			            </div>
 			            <div class="col-md-9">
 			               <select  name="userGroup" ng-model="user.userGroup" class="form-control" >
+			                <option selected disabled>Select Group </option>
 			               		<% if(typeof groups != 'undefined'){ %>
 									<% for(var i=0; i < groups.length; i++) { %>
+
 										<option><%= groups[i].group %></option>
 									<% } %>
 								<% } %>
