--- a/views/admin/angular.ejs
+++ b/views/admin/angular.ejs
@@ -164,9 +164,9 @@
         <div class="menu-user-block">
             <div class="dropdown dropdown-avatar">
                 <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <span class="avatar" href="javascript:void(0);">
-                        <img src="../assets/common/img/temp/avatars/1.jpg" alt="Alternative text to the image">
-                    </span>
+                     <span class="avatar" href="javascript:void(0);">
+                        <img src="../assets/common/img/logo2.png" alt="Alternative text to the image">
+                    </span>  
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
                     <a class="dropdown-item" style="cursor:pointer" ng-click="changePasswordScreen()"><i class="dropdown-icon icmn-user"></i> Change Password</a>
