--- a/views/admin/manage_users.ejs
+++ b/views/admin/manage_users.ejs
@@ -104,7 +104,7 @@
 			               </select>
 			            </div>
 			        </div>
-			        <div ng-show="usertype.showvalue" class="form-group row form-user-group" >
+			        <div ng-if="user.userType=='USER'" class="form-group row form-user-group" >
 			            <div class="col-md-3">
 			                <label class="form-control-label">User Group</label>
 			            </div>
